; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_dsm_impl.c_dsm_impl_pin_segment.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_dsm_impl.c_dsm_impl_pin_segment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dynamic_shared_memory_type = common dso_local global i32 0, align 4
@DUPLICATE_SAME_ACCESS = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@PostmasterHandle = common dso_local global i32 0, align 4
@SEGMENT_NAME_PREFIX = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dsm_impl_pin_segment(i32 %0, i8* %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8**, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8** %2, i8*** %6, align 8
  %7 = load i32, i32* @dynamic_shared_memory_type, align 4
  switch i32 %7, label %8 [
  ]

8:                                                ; preds = %3
  br label %9

9:                                                ; preds = %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
